--- a/build.gradle
+++ b/build.gradle
@@ -1,1 +1,11 @@
 apply plugin: 'java'
+
+repositories{
+    mavenCentral()
+}
+
+dependencies{
+    compile 'ch.qos.logback:logback-classic:1.0.13'
+
+    testCompile 'junit:junit:4.11'
+}
