Add Maven publishing.

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'maven-publish'
 
 group = 'com.example'
 version = '1.5'
@@ -17,4 +18,25 @@ dependencies{
     compile 'ch.qos.logback:logback-classic:1.0.13'
 
     testCompile 'junit:junit:4.11'
+}
+
+task sourceJar(type: Jar) {
+    from sourceSets.main.allJava
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+
+            artifact sourceJar {
+                classifier "sources"
+            }
+        }
+    }
+    repositories {
+        maven {
+            url "file://$buildDir/repo"
+        }
+    }
 }
